; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/extr_isci_sysctl.c_isci_sysctl_stop.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/extr_isci_sysctl.c_isci_sysctl_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ISCI_CONTROLLER = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ISCI_CONTROLLER*, i32)* @isci_sysctl_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @isci_sysctl_stop(%struct.ISCI_CONTROLLER* %0, i32 %1) #0 {
  %3 = alloca %struct.ISCI_CONTROLLER*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.ISCI_CONTROLLER* %0, %struct.ISCI_CONTROLLER** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32* null, i32** %5, align 8
  %6 = load %struct.ISCI_CONTROLLER*, %struct.ISCI_CONTROLLER** %3, align 8
  %7 = getelementptr inbounds %struct.ISCI_CONTROLLER, %struct.ISCI_CONTROLLER* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @scif_controller_get_scic_handle(i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @scic_controller_get_phy_handle(i32 %9, i32 %10, i32** %5)
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @scic_phy_stop(i32* %12)
  ret void
}

declare dso_local i32 @scic_controller_get_phy_handle(i32, i32, i32**) #1

declare dso_local i32 @scif_controller_get_scic_handle(i32) #1

declare dso_local i32 @scic_phy_stop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
